--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "uni-project-8b94e"
+  },
+  "targets": {
+    "uni-project-8b94e": {
+      "hosting": {
+        "my-first-app": [
+          "uni-project-8b94e"
+        ]
+      }
+    }
   }
 }
